beldex_libwallet2_api_c/src/main/cpp/wallet2_api_c.h

//     std::string getLabel() const {return m_label;}
extern ADDAPI const char* BELDEX_SubaddressAccountRow_getLabel(void* subaddressAccountRow_ptr);
//     std::string getBalance() const {return m_balance;}
extern ADDAPI const char* BELDEX_SubaddressAccountRow_getBalance(void* subaddressAccountRow_ptr);
//     std::string getUnlockedBalance() const {return m_unlockedBalance;}
extern ADDAPI const char* BELDEX_SubaddressAccountRow_getUnlockedBalance(void* subaddressAccountRow_ptr);
//     std::size_t getRowId() const {return m_rowId;}
extern ADDAPI size_t BELDEX_SubaddressAccountRow_getRowId(void* subaddressAccountRow_ptr);
// };

// struct SubaddressAccount
// {
//     virtual ~SubaddressAccount() = 0;
//     virtual std::vector<SubaddressAccountRow*> getAll() const = 0;
extern ADDAPI int BELDEX_SubaddressAccount_getAll_size(void* subaddressAccount_ptr);
extern ADDAPI void* BELDEX_SubaddressAccount_getAll_byIndex(void* subaddressAccount_ptr, int index);
//     virtual void addRow(const std::string &label) = 0;
extern ADDAPI void BELDEX_SubaddressAccount_addRow(void* subaddressAccount_ptr, const char* label);
//     virtual void setLabel(uint32_t accountIndex, const std::string &label) = 0;
extern ADDAPI void BELDEX_SubaddressAccount_setLabel(void* subaddressAccount_ptr, uint32_t accountIndex, const char* label);
//     virtual void refresh() = 0;
extern ADDAPI void BELDEX_SubaddressAccount_refresh(void* subaddressAccount_ptr);
// };

// struct MultisigState {
//     MultisigState() : isMultisig(false), isReady(false), threshold(0), total(0) {}

//     bool isMultisig;
extern ADDAPI bool BELDEX_MultisigState_isMultisig(void* multisigState_ptr);
//     bool isReady;
extern ADDAPI bool BELDEX_MultisigState_isReady(void* multisigState_ptr);
//     uint32_t threshold;
extern ADDAPI uint32_t BELDEX_MultisigState_threshold(void* multisigState_ptr);
//     uint32_t total;
extern ADDAPI uint32_t BELDEX_MultisigState_total(void* multisigState_ptr);
// };


// struct DeviceProgress {
//     DeviceProgress(): m_progress(0), m_indeterminate(false) {}
//     DeviceProgress(double progress, bool indeterminate=false): m_progress(progress), m_indeterminate(indeterminate) {}

//     virtual double progress() const { return m_progress; }
extern ADDAPI bool BELDEX_DeviceProgress_progress(void* deviceProgress_ptr);
//     virtual bool indeterminate() const { return m_indeterminate; }
extern ADDAPI bool BELDEX_DeviceProgress_indeterminate(void* deviceProgress_ptr);
//    };
//     virtual ~Wallet() = 0;
//     virtual std::string seed(const std::string& seed_offset = "") const = 0;
extern ADDAPI const char* BELDEX_Wallet_seed(void* wallet_ptr, const char* seed_offset);
//     virtual std::string getSeedLanguage() const = 0;
extern ADDAPI const char* BELDEX_Wallet_getSeedLanguage(void* wallet_ptr);
//     virtual void setSeedLanguage(const std::string &arg) = 0;
extern ADDAPI void BELDEX_Wallet_setSeedLanguage(void* wallet_ptr, const char* arg);
//     virtual int status() const = 0;
extern ADDAPI int BELDEX_Wallet_status(void* wallet_ptr);
//     virtual std::string errorString() const = 0;
extern ADDAPI const char* BELDEX_Wallet_errorString(void* wallet_ptr);
//     virtual void statusWithErrorString(int& status, std::string& errorString) const = 0;
//     virtual bool setPassword(const std::string &password) = 0;
extern ADDAPI bool BELDEX_Wallet_setPassword(void* wallet_ptr, const char* password);
//     virtual const std::string& getPassword() const = 0;
extern ADDAPI const char* BELDEX_Wallet_getPassword(void* wallet_ptr);
extern ADDAPI void BELDEX_Wallet_setLedgerCallback(void (*sendToLedgerDevice)(unsigned char *command, unsigned int cmd_len));