impls/monero.dart/lib/src/generated_bindings_beldex.g.dart


  ffi.Pointer<ffi.Char> BELDEX_SubaddressAccountRow_getLabel(
    ffi.Pointer<ffi.Void> subaddressAccountRow_ptr,
  ) {
    return _BELDEX_SubaddressAccountRow_getLabel(
      subaddressAccountRow_ptr,
    );
  }

  late final _BELDEX_SubaddressAccountRow_getLabelPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<ffi.Void>)>>('BELDEX_SubaddressAccountRow_getLabel');
  late final _BELDEX_SubaddressAccountRow_getLabel =
      _BELDEX_SubaddressAccountRow_getLabelPtr.asFunction<
          ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Void>)>();

  ffi.Pointer<ffi.Char> BELDEX_SubaddressAccountRow_getBalance(
    ffi.Pointer<ffi.Void> subaddressAccountRow_ptr,
  ) {
    return _BELDEX_SubaddressAccountRow_getBalance(
      subaddressAccountRow_ptr,
    );
  }

  late final _BELDEX_SubaddressAccountRow_getBalancePtr = _lookup<
          ffi.NativeFunction<
              ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Void>)>>(
      'BELDEX_SubaddressAccountRow_getBalance');
  late final _BELDEX_SubaddressAccountRow_getBalance =
      _BELDEX_SubaddressAccountRow_getBalancePtr.asFunction<
          ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Void>)>();

  ffi.Pointer<ffi.Char> BELDEX_SubaddressAccountRow_getUnlockedBalance(
    ffi.Pointer<ffi.Void> subaddressAccountRow_ptr,
  ) {
    return _BELDEX_SubaddressAccountRow_getUnlockedBalance(
      subaddressAccountRow_ptr,
    );
  }

  late final _BELDEX_SubaddressAccountRow_getUnlockedBalancePtr = _lookup<
          ffi.NativeFunction<
              ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Void>)>>(
      'BELDEX_SubaddressAccountRow_getUnlockedBalance');
  late final _BELDEX_SubaddressAccountRow_getUnlockedBalance =
      _BELDEX_SubaddressAccountRow_getUnlockedBalancePtr.asFunction<
          ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Void>)>();

  int BELDEX_SubaddressAccountRow_getRowId(
    ffi.Pointer<ffi.Void> subaddressAccountRow_ptr,
  ) {
    return _BELDEX_SubaddressAccountRow_getRowId(
      subaddressAccountRow_ptr,
    );
  }

  late final _BELDEX_SubaddressAccountRow_getRowIdPtr =
      _lookup<ffi.NativeFunction<ffi.Size Function(ffi.Pointer<ffi.Void>)>>(
          'BELDEX_SubaddressAccountRow_getRowId');
  late final _BELDEX_SubaddressAccountRow_getRowId =
      _BELDEX_SubaddressAccountRow_getRowIdPtr.asFunction<
          int Function(ffi.Pointer<ffi.Void>)>();

  int BELDEX_SubaddressAccount_getAll_size(
    ffi.Pointer<ffi.Void> subaddressAccount_ptr,
  ) {
    return _BELDEX_SubaddressAccount_getAll_size(
      subaddressAccount_ptr,
    );
  }

  late final _BELDEX_SubaddressAccount_getAll_sizePtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Void>)>>(
          'BELDEX_SubaddressAccount_getAll_size');
  late final _BELDEX_SubaddressAccount_getAll_size =
      _BELDEX_SubaddressAccount_getAll_sizePtr.asFunction<
          int Function(ffi.Pointer<ffi.Void>)>();

  ffi.Pointer<ffi.Void> BELDEX_SubaddressAccount_getAll_byIndex(
    ffi.Pointer<ffi.Void> subaddressAccount_ptr,
    int index,
  ) {
    return _BELDEX_SubaddressAccount_getAll_byIndex(
      subaddressAccount_ptr,
      index,
    );
  }

  late final _BELDEX_SubaddressAccount_getAll_byIndexPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Void> Function(ffi.Pointer<ffi.Void>,
              ffi.Int)>>('BELDEX_SubaddressAccount_getAll_byIndex');
  late final _BELDEX_SubaddressAccount_getAll_byIndex =
      _BELDEX_SubaddressAccount_getAll_byIndexPtr.asFunction<
          ffi.Pointer<ffi.Void> Function(ffi.Pointer<ffi.Void>, int)>();

  void BELDEX_SubaddressAccount_addRow(
    ffi.Pointer<ffi.Void> subaddressAccount_ptr,
    ffi.Pointer<ffi.Char> label,
  ) {
    return _BELDEX_SubaddressAccount_addRow(
      subaddressAccount_ptr,
      label,
    );
  }

  late final _BELDEX_SubaddressAccount_addRowPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Void>,
              ffi.Pointer<ffi.Char>)>>('BELDEX_SubaddressAccount_addRow');
  late final _BELDEX_SubaddressAccount_addRow =
      _BELDEX_SubaddressAccount_addRowPtr.asFunction<
          void Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Char>)>();

  void BELDEX_SubaddressAccount_setLabel(
    ffi.Pointer<ffi.Void> subaddressAccount_ptr,
    int accountIndex,
    ffi.Pointer<ffi.Char> label,
  ) {
    return _BELDEX_SubaddressAccount_setLabel(
      subaddressAccount_ptr,
      accountIndex,
      label,
    );
  }

  late final _BELDEX_SubaddressAccount_setLabelPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Void>, ffi.Uint32,
              ffi.Pointer<ffi.Char>)>>('BELDEX_SubaddressAccount_setLabel');
  late final _BELDEX_SubaddressAccount_setLabel =
      _BELDEX_SubaddressAccount_setLabelPtr.asFunction<
          void Function(ffi.Pointer<ffi.Void>, int, ffi.Pointer<ffi.Char>)>();

  void BELDEX_SubaddressAccount_refresh(
    ffi.Pointer<ffi.Void> subaddressAccount_ptr,
  ) {
    return _BELDEX_SubaddressAccount_refresh(
      subaddressAccount_ptr,
    );
  }

  late final _BELDEX_SubaddressAccount_refreshPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>)>>(
          'BELDEX_SubaddressAccount_refresh');
  late final _BELDEX_SubaddressAccount_refresh =
      _BELDEX_SubaddressAccount_refreshPtr.asFunction<
          void Function(ffi.Pointer<ffi.Void>)>();

  bool BELDEX_MultisigState_isMultisig(
    ffi.Pointer<ffi.Void> multisigState_ptr,
  ) {
    return _BELDEX_MultisigState_isMultisig(
      multisigState_ptr,
    );
  }

  late final _BELDEX_MultisigState_isMultisigPtr =
      _lookup<ffi.NativeFunction<ffi.Bool Function(ffi.Pointer<ffi.Void>)>>(
          'BELDEX_MultisigState_isMultisig');
  late final _BELDEX_MultisigState_isMultisig =
      _BELDEX_MultisigState_isMultisigPtr.asFunction<
          bool Function(ffi.Pointer<ffi.Void>)>();

  bool BELDEX_MultisigState_isReady(
    ffi.Pointer<ffi.Void> multisigState_ptr,
  ) {
    return _BELDEX_MultisigState_isReady(
      multisigState_ptr,
    );
  }

  late final _BELDEX_MultisigState_isReadyPtr =
      _lookup<ffi.NativeFunction<ffi.Bool Function(ffi.Pointer<ffi.Void>)>>(
          'BELDEX_MultisigState_isReady');
  late final _BELDEX_MultisigState_isReady = _BELDEX_MultisigState_isReadyPtr
      .asFunction<bool Function(ffi.Pointer<ffi.Void>)>();

  int BELDEX_MultisigState_threshold(
    ffi.Pointer<ffi.Void> multisigState_ptr,
  ) {
    return _BELDEX_MultisigState_threshold(
      multisigState_ptr,
    );
  }

  late final _BELDEX_MultisigState_thresholdPtr =
      _lookup<ffi.NativeFunction<ffi.Uint32 Function(ffi.Pointer<ffi.Void>)>>(
          'BELDEX_MultisigState_threshold');
  late final _BELDEX_MultisigState_threshold =
      _BELDEX_MultisigState_thresholdPtr.asFunction<
          int Function(ffi.Pointer<ffi.Void>)>();

  int BELDEX_MultisigState_total(
    ffi.Pointer<ffi.Void> multisigState_ptr,
  ) {
    return _BELDEX_MultisigState_total(
      multisigState_ptr,
    );
  }

  late final _BELDEX_MultisigState_totalPtr =
      _lookup<ffi.NativeFunction<ffi.Uint32 Function(ffi.Pointer<ffi.Void>)>>(
          'BELDEX_MultisigState_total');
  late final _BELDEX_MultisigState_total = _BELDEX_MultisigState_totalPtr
      .asFunction<int Function(ffi.Pointer<ffi.Void>)>();

  bool BELDEX_DeviceProgress_progress(
    ffi.Pointer<ffi.Void> deviceProgress_ptr,
  ) {
    return _BELDEX_DeviceProgress_progress(
      deviceProgress_ptr,
    );
  }

  late final _BELDEX_DeviceProgress_progressPtr =
      _lookup<ffi.NativeFunction<ffi.Bool Function(ffi.Pointer<ffi.Void>)>>(
          'BELDEX_DeviceProgress_progress');
  late final _BELDEX_DeviceProgress_progress =
      _BELDEX_DeviceProgress_progressPtr.asFunction<
          bool Function(ffi.Pointer<ffi.Void>)>();

  bool BELDEX_DeviceProgress_indeterminate(
    ffi.Pointer<ffi.Void> deviceProgress_ptr,
  ) {
    return _BELDEX_DeviceProgress_indeterminate(
      deviceProgress_ptr,
    );
  }

  late final _BELDEX_DeviceProgress_indeterminatePtr =
      _lookup<ffi.NativeFunction<ffi.Bool Function(ffi.Pointer<ffi.Void>)>>(
          'BELDEX_DeviceProgress_indeterminate');
  late final _BELDEX_DeviceProgress_indeterminate =
      _BELDEX_DeviceProgress_indeterminatePtr.asFunction<
          bool Function(ffi.Pointer<ffi.Void>)>();

  ffi.Pointer<ffi.Char> BELDEX_Wallet_seed(
    ffi.Pointer<ffi.Void> wallet_ptr,
    ffi.Pointer<ffi.Char> seed_offset,
  ) {
    return _BELDEX_Wallet_seed(
      wallet_ptr,
      seed_offset,
    );
  }

  late final _BELDEX_Wallet_seedPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Void>,
              ffi.Pointer<ffi.Char>)>>('BELDEX_Wallet_seed');
  late final _BELDEX_Wallet_seed = _BELDEX_Wallet_seedPtr.asFunction<
      ffi.Pointer<ffi.Char> Function(
          ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Char>)>();

  ffi.Pointer<ffi.Char> BELDEX_Wallet_getSeedLanguage(
    ffi.Pointer<ffi.Void> wallet_ptr,
  ) {
    return _BELDEX_Wallet_getSeedLanguage(
      wallet_ptr,
    );
  }

  late final _BELDEX_Wallet_getSeedLanguagePtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<ffi.Void>)>>('BELDEX_Wallet_getSeedLanguage');
  late final _BELDEX_Wallet_getSeedLanguage = _BELDEX_Wallet_getSeedLanguagePtr
      .asFunction<ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Void>)>();

  void BELDEX_Wallet_setSeedLanguage(
    ffi.Pointer<ffi.Void> wallet_ptr,
    ffi.Pointer<ffi.Char> arg,
  ) {
    return _BELDEX_Wallet_setSeedLanguage(
      wallet_ptr,
      arg,
    );
  }

  late final _BELDEX_Wallet_setSeedLanguagePtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Void>,
              ffi.Pointer<ffi.Char>)>>('BELDEX_Wallet_setSeedLanguage');
  late final _BELDEX_Wallet_setSeedLanguage =
      _BELDEX_Wallet_setSeedLanguagePtr.asFunction<
          void Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Char>)>();

  int BELDEX_Wallet_status(
    ffi.Pointer<ffi.Void> wallet_ptr,
  ) {
    return _BELDEX_Wallet_status(
      wallet_ptr,
    );
  }

  late final _BELDEX_Wallet_statusPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Void>)>>(
          'BELDEX_Wallet_status');
  late final _BELDEX_Wallet_status = _BELDEX_Wallet_statusPtr.asFunction<
      int Function(ffi.Pointer<ffi.Void>)>();

  ffi.Pointer<ffi.Char> BELDEX_Wallet_errorString(
    ffi.Pointer<ffi.Void> wallet_ptr,
  ) {
    return _BELDEX_Wallet_errorString(
      wallet_ptr,
    );
  }

  late final _BELDEX_Wallet_errorStringPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<ffi.Void>)>>('BELDEX_Wallet_errorString');
  late final _BELDEX_Wallet_errorString = _BELDEX_Wallet_errorStringPtr
      .asFunction<ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Void>)>();

  bool BELDEX_Wallet_setPassword(
    ffi.Pointer<ffi.Void> wallet_ptr,
    ffi.Pointer<ffi.Char> password,
  ) {
    return _BELDEX_Wallet_setPassword(
      wallet_ptr,
      password,
    );
  }

  late final _BELDEX_Wallet_setPasswordPtr = _lookup<
      ffi.NativeFunction<
          ffi.Bool Function(ffi.Pointer<ffi.Void>,
              ffi.Pointer<ffi.Char>)>>('BELDEX_Wallet_setPassword');
  late final _BELDEX_Wallet_setPassword =
      _BELDEX_Wallet_setPasswordPtr.asFunction<
          bool Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Char>)>();

  ffi.Pointer<ffi.Char> BELDEX_Wallet_getPassword(
    ffi.Pointer<ffi.Void> wallet_ptr,
  ) {
    return _BELDEX_Wallet_getPassword(
      wallet_ptr,
    );
  }
